<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="@dimen/main_space">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/detailsBgImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detailsMovieNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_space"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsBgImage" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detailsMovieDateTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_space"
        android:text="@string/release_date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsMovieNameText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detailsMovieDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/internal_space"
        app:layout_constraintStart_toEndOf="@+id/detailsMovieDateTitleText"
        app:layout_constraintTop_toTopOf="@id/detailsMovieDateTitleText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detailsMovieRatingTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/internal_space"
        android:text="@string/rating"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/detailsMovieDateText"
        app:layout_constraintTop_toTopOf="@id/detailsMovieDateTitleText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detailsMovieRatingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/internal_space"
        app:layout_constraintStart_toEndOf="@id/detailsMovieRatingTitleText"
        app:layout_constraintTop_toTopOf="@id/detailsMovieDateTitleText" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detailsOverviewTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_space"
        android:text="@string/overview_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsMovieDateTitleText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detailsOverviewText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/internal_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/detailsOverviewTitleText"
        app:layout_constraintTop_toBottomOf="@id/detailsOverviewTitleText" />

</androidx.constraintlayout.widget.ConstraintLayout>